# setfit-hf

./: .gitignore  README.md  pyproject.toml
conf/: config.toml
src/setfit_hf/: __init__.py  cli.py  oneshot.py
