[project]
name = "setfit-hf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael Booth", email = "michael@databooth.com.au" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "duckdb>=1.3.2",
    "loguru>=0.7.3",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "setfit>=1.1.3",
]

[project.scripts]
setfit-hf = "setfit_hf:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
